--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">Casino Manager</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
     <string name="out_of_service">Out of Service:</string>
     <string name="alerts">Alerts:</string>
     <string name="online">Online:</string>
@@ -21,6 +20,7 @@
     <string name="alerts_text">Alerts</string>
     <string name="out_of_service_text">Out of Service</string>
     <string name="floor_staff">Floor Staff</string>
+    <string name="alert_take">Take</string>
     <string-array name="status">
         <item>Online</item>
         <item>Out of Service</item>
