--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,9 +21,13 @@
     <string name="out_of_service_text">Out of Service</string>
     <string name="floor_staff">Floor Staff</string>
     <string name="alert_take">Take</string>
+    <string name="report_saved">Report Saved</string>
     <string-array name="status">
         <item>Online</item>
         <item>Out of Service</item>
         <item>Alerts</item>
     </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
