--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="floor_staff">Floor Staff</string>
     <string name="alert_take">Take</string>
     <string name="report_saved">Report Saved</string>
+    <string name="manager_alerted">Manager Alerted</string>
     <string-array name="status">
         <item>Online</item>
         <item>Out of Service</item>
