Even more stuff

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="alerts_text">Alerts</string>
     <string name="out_of_service_text">Out of Service</string>
     <string name="floor_staff">Floor Staff</string>
-    <string name="alert_take">Take</string>
+    <string name="alert_take">Take Job</string>
     <string name="report_saved">Report Saved</string>
     <string name="manager_alerted">Manager Alerted</string>
     <string name="check_paper_fix">Paper should be inserted with the black marks first. Turn the audit key.</string>
@@ -34,4 +34,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="name">Name:</string>
+    <string name="status">Status:</string>
+    <string name="position">Position:</string>
 </resources>
